@startuml

title __CONTROLLERS's Class Diagram__\n

  namespace Controllers {
    class Controllers.Customer {
        - location : String
        - password : String
        - username : String
        + Customer()
        + Customer()
        + Customer()
        + getLocation()
        + getPassword()
        + getUsername()
        + setLocation()
        + setPassword()
        + setUsername()
        + toString()
    }
  }
  

  namespace Controllers {
    class Controllers.Taxi {
        - daysAvailable : StringProperty
        - driver : StringProperty
        - make : StringProperty
        - rate : FloatProperty
        - taxiLocation : StringProperty
        - taxiMobile : StringProperty
        + Taxi()
        + Taxi()
        + daysAvailableProperty()
        + driverProperty()
        + getDaysAvailable()
        + getDriver()
        + getMake()
        + getRate()
        + getTaxiLocation()
        + getTaxiMobile()
        + makeProperty()
        + rateProperty()
        + setDaysAvailable()
        + setDriver()
        + setMake()
        + setRate()
        + setTaxiLocation()
        + setTaxiMobile()
        + taxiLocationProperty()
        + taxiMobileProperty()
        + toString()
    }
  }
  

  namespace Controllers {
    class Controllers.adminController {
        - allFieldsRequired : Label
        - connection : Connection
        - dashboard : JFXButton
        - daysAvailable : JFXTextArea
        - driver : JFXTextField
        - exit : JFXButton
        - exitbtn : JFXButton
        - make : JFXTextField
        - pst : PreparedStatement
        - rate : JFXTextField
        - submit : JFXButton
        - success : Label
        - taxiLocation : JFXTextField
        - taxiMobile : JFXTextField
        + adminController()
        + initialize()
        ~ dashboardAction()
        ~ exitAction()
        ~ submitAction()
    }
  }
  

  namespace Controllers {
    class Controllers.bookNowController {
        - connection : Connection
        - datePicker : DatePicker
        - exitbtn : JFXButton
        - logOut : JFXButton
        - myAcc : JFXButton
        - pst : PreparedStatement
        + bookNowController()
        + initialize()
        ~ exitAction()
        ~ logOutAction()
        ~ myAccAction()
    }
  }
  

  namespace Controllers {
    class Controllers.dashboardController {
        - bookNow : JFXButton
        - exit : ImageView
        - logOut : JFXButton
        - myAcc : JFXButton
        - nameLabel : Label
        + dashboardController()
        + initialize()
        ~ bookNowAction()
        ~ exitAction()
        ~ logOutAction()
        ~ myAccAction()
    }
  }
  

  namespace Controllers {
    class Controllers.loginController {
        + locationHeader : String
        + password : JFXPasswordField
        + username : JFXTextField
        + usernameDash : String
        - connection : Connection
        - imageViewUsers : ImageView
        - login : JFXButton
        - pst : PreparedStatement
        - rememberMe : JFXCheckBox
        - signUp : JFXButton
        - spinner : JFXSpinner
        - userNotExist : Label
        + initialize()
        + loginController()
        ~ exitAction()
        ~ loginAction()
        ~ signUpAction()
    }
  }
  

  namespace Controllers {
    class Controllers.myAccountController {
        - allFieldsRequired : Label
        - confirmPassword : JFXTextField
        - connection : Connection
        - dashboard : JFXButton
        - exitbtn : JFXButton
        - header : Label
        - location : JFXTextField
        - logout : JFXButton
        - nameLabel : Label
        - nameLabel11 : Label
        - nameLabel111 : Label
        - password : JFXTextField
        - pst : PreparedStatement
        - update : JFXButton
        - username : JFXTextField
        + initialize()
        + myAccountController()
        ~ dashboardAction()
        ~ exitAction()
        ~ logOutAction()
        ~ updateAction()
    }
  }
  

  namespace Controllers {
    class Controllers.signUpController {
        - Spassword : JFXPasswordField
        - Susername : JFXTextField
        - allFieldsRequiredSignUp : Label
        - connection : Connection
        - exit : JFXButton
        - femaleRadio : JFXRadioButton
        - location : JFXTextField
        - login : JFXButton
        - maleRadio : JFXRadioButton
        - pst : PreparedStatement
        - signUp : JFXButton
        - spinner : JFXSpinner
        + getGender()
        + initialize()
        + signUpController()
        + userExists()
        ~ exitAction()
        ~ loginAction()
        ~ signUpAction()
    }
  }
  

  Controllers.adminController .up.|> javafx.fxml.Initializable
  Controllers.adminController o-- Connection.DBHandler : handler
  Controllers.bookNowController .up.|> javafx.fxml.Initializable
  Controllers.bookNowController o-- Connection.DBHandler : handler
  Controllers.dashboardController .up.|> javafx.fxml.Initializable
  Controllers.dashboardController -up-|> Controllers.loginController
  Controllers.loginController .up.|> javafx.fxml.Initializable
  Controllers.loginController -up-|> Controllers.signUpController
  Controllers.loginController o-- Connection.DBHandler : handler
  Controllers.myAccountController .up.|> javafx.fxml.Initializable
  Controllers.myAccountController o-- Connection.DBHandler : handler
  Controllers.signUpController .up.|> javafx.fxml.Initializable
  Controllers.signUpController o-- Connection.DBHandler : handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
